--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ MYSQL_HOST=localhost
 # ========== MongoDB Config ==========
 MONGO_URI=mongodb://localhost:27017/ai_task_db
 
+# ========== JWT Secret ==========
+JWT_SECRET=SECRET_KEY
